--- a/railway.toml
+++ b/railway.toml
@@ -2,4 +2,4 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "pip install python-telegram-bot[webhooks]==20.6 && python ttp7.py"
+startCommand = "pip install python-telegram-bot[webhooks]==20.6 && python test_webhook.py"
